@@ -4,6 +4,16 @@
 
 2010-07-10	tboggs <tboggs@users.sourceforge.net>
 
+    * Spectral.py (ImageArray.__getitem__): Added method to ensure that data
+      extracted is returned as numpy array and not another ImageArray object.
+
+    * __init__.py: Import spyColors from Spectral.py (accidentally removed with
+      previous commit).
+    
+    * Algorithms/Cluster.py (kmeans): Fixed typo in status message.
+
+2010-07-10	tboggs <tboggs@users.sourceforge.net>
+
     Move GUI-related functions into the Graphics sub-package.  Also, no longer
     attempt to initialize NumTut for image display if wx fails since NumTut no
     longer exists.
